--- a/acsset/main.css
+++ b/acsset/main.css
@@ -635,6 +635,7 @@ p {
 .selection__input {
     display: flex;
     width: 400px;
+    max-width: 100%;
     height: 40px;
 }
 
@@ -644,6 +645,7 @@ p {
     height: 100%;
     padding: 0 10px;
     font-size: 18px;
+    position: relative;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     outline: none;
@@ -654,6 +656,8 @@ p {
 .class__btn {
     line-height: 40px;
     width: 100px;
+    position: absolute;
+    right: 14px;
     align-items: center;
     background-color: #c89979;
     border-top-right-radius: 4px;
