--- a/acsset/main.css
+++ b/acsset/main.css
@@ -6,7 +6,6 @@
     color: #fff;
 }
 
-
 /* body */
 
 .wrapper {
@@ -21,6 +20,7 @@
 .header {
     background-color: #333333;
     height: 200px;
+
 }
 
 .header__nav {
@@ -181,14 +181,22 @@ p {
 
 
 /* menu */
-
+.sticky{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #333333;
+}
 .header__menu {
     align-items: center;
     width: 100%;
     margin: auto 0;
     max-height: 60px;
     line-height: 60px;
+    z-index: 4;
     overflow: hidden;
+
 }
 
 .header__menu-div {
@@ -250,12 +258,11 @@ p {
 .slider__list {
     height: 450px;
     width: 100%;
-    display: flex;
+    overflow: hidden;
     position: relative;
 }
 
 .slider__item {
-    flex: 1 0 100%;
     width: 100%;
     height: 100%;
 }
@@ -275,7 +282,10 @@ p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     max-width: 60%;
 }
-
+.active{
+    opacity: 1;
+    visibility: visible;
+}
 .slider__btn:hover {
     background-color: #c89979;
     border: 2px solid #c89979
@@ -316,33 +326,35 @@ p {
     font-family: 'Times New Roman', Times, serif;
 }
 
-.control {
+.control__icon-right {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #fff;
+    top: 40%;
+    color: #0c0c0c;
+    font-size: 26px;
+    right: 3%;
     position: absolute;
-    font-size: 20px;
-    transform: translateX(-60%);
+    z-index: 2;
+    padding: 7px 0 0;
     cursor: pointer;
-    width: 44px;
-    height: 44px;
-    display: block;
-    border: 1px solid rgb(168, 167, 167);
-    bottom: 50%;
+}
+
+.control__icon-left{
+    padding: 7px 0 0;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
-}
-
-.control__icon {
-    display: block;
-    color: rgb(177, 177, 177);
-}
-
-.right {
-    right: 0;
-    padding: 10px 16px;
-}
-
-.left {
-    left: 4%;
-    padding: 10px 16px;
-    border-radius: 50%;
+    background-color: #fff;
+    font-size: 26px;
+    top: 40%;
+    left: 3%;
+    text-align: center;
+    color: #0c0c0c;
+    position: absolute;
+    z-index: 2;
+    cursor: pointer;
 }
 
 .controller {
@@ -350,15 +362,6 @@ p {
     text-align: center;
     display: block;
     animation: annimation linear 0.2s;
-}
-
-.control__icon:hover {
-    color: #fff;
-}
-
-.controller :hover {
-    background-color: #d87f44;
-    border: 1px solid #d87f44;
 }
 
 
@@ -383,7 +386,72 @@ p {
     margin-left: -15px;
     margin-right: -15px;
 }
+/* keyframe */
 
+  .active.fade-bottom {
+    animation: fade-bottom 1s ease-in;
+  }
+  .active.fade-left {
+    animation: fade-left 1s ease-in;
+  }
+  .active.fade-right {
+    animation: fade-right 1s ease-in;
+  }
+  .sticky.fade-top{
+    animation: fade-top 1s linear;
+  }
+  @keyframes fade-top {
+    0% {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-bottom {
+    0% {
+      transform: translateY(50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-left {
+    0% {
+      transform: translateX(-100px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  
+  @keyframes fade-right {
+    0% {
+      transform: translateX(100px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+.reveal{
+    position: relative;
+    transform: translateY(70px);
+    opacity: 0;
+    transition: 1s all ease;
+}
+  
+.reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+}
 .height {
     height: 300px;
 }
@@ -410,20 +478,16 @@ p {
     object-fit: cover;
     transition: transform 0.4s;
 }
-
+.keyword{
+    transform: translateY(0);
+    opacity: 1;
+}
 .main__row-column-2:hover .main__row-banner {
     transform: scale(1.1);
     animation: keyword 0.3s ease-in;
 }
 
-@keyframes keyword {
-    form {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
+
 
 .main__row-link {
     text-decoration: none;
@@ -615,7 +679,7 @@ p {
 
 .main__select {
     display: flex;
-    padding: 50px 15px;
+    padding: 50px 0;
     border-top: 1px solid #ccc;
     justify-content: space-between;
 }
@@ -656,7 +720,6 @@ p {
 .class__btn {
     line-height: 40px;
     width: 100px;
-    position: absolute;
     right: 14px;
     align-items: center;
     background-color: #c89979;
@@ -675,7 +738,6 @@ p {
 
 .footer {
     background-color: #333333;
-    height: 100%;
 }
 
 .footer__adress {
@@ -688,7 +750,6 @@ p {
 .footer__column-4 {
     width: 25%;
     padding-top: 10px;
-    margin-left: 20px;
 }
 
 .footer__icon {
@@ -703,7 +764,6 @@ p {
 
 .footer__pay-bank {
     height: 40px;
-    padding: 0 20px;
 }
 
 .pay__img {
@@ -810,7 +870,6 @@ p {
 .footer__conten-text {
     font-size: 16px;
     width: 50%;
-    text-align: center;
     font-weight: 300;
 }
 
@@ -818,16 +877,22 @@ p {
 /* menu-app */
 
 .header__app {
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
     width: 100%;
     height: 90px;
+    z-index: 3;
     line-height: 90px;
-    position: relative;
     background-color: #333333;
     display: none;
 }
 
 .header__app-menu {
     display: flex;
+    position: relative;
+
     justify-content: space-between;
     height: 100%;
 }
@@ -978,8 +1043,13 @@ p {
         display: block;
     }
     .header,
-    .controller {
+    .controller
+     {
         display: none;
+    }
+    
+    .main__select {
+        padding: 20px 15px ;
     }
     .slider__h1,
     .conten__h1 {
@@ -1012,6 +1082,9 @@ p {
         width: calc(33% - 20px);
         margin-bottom: 20px;
     }
+    .slider {
+        margin-top: 89px;
+    }
 }
 
 
@@ -1020,6 +1093,9 @@ p {
 @media (max-width:549px) {
     .header__app {
         display: block;
+    }
+    .slider {
+        margin-top: 89px;
     }
     .header,
     .controller {
@@ -1093,5 +1169,8 @@ p {
     }
     .main__row-p{
         height: 55px
+    }
+    .main__select {
+        padding: 20px 15px ;
     }
 }
